# agent-memory-project

./: README.md  docker-compose.yml  main.py  pyproject.toml
agent_memory_project/: __main__.py
agent_memory_project/api/: langmem_api.py  main.py  memory_api.py  schemas.py
agent_memory_project/core/: config.py
agent_memory_project/llm/: __init__.py  openai_client.py
agent_memory_project/services/: langmem_service.py  memory_orchestrator_service.py  memory_service.py  persistent_memory_service.py  session_search_service.py  skill_service.py
agent_memory_project/test/: test_chinese_search.py  test_chinese_search_v2.py  test_fts5_internal_tables.py  test_fts5_limitations.py  test_fts5_solutions.py  test_fts5_token_viewing.py  test_fts_tokenizer.py  test_tokenizer.py  test_trigram_detailed.py
config/: langmem_config.json  local.toml  test.toml
docs/: langmem_implementation_summary.md  langmem_postgresql.md  langmem_quickstart.md
examples/: langmem_demo.py
generated_memories/hermes/: state.db
generated_memories/hermes/memories/: MEMORY.md  USER.md
generated_memories/hermes/skills/pr-workflow/: SKILL.md  metadata.json
generated_memories/hermes/skills/session-search-review/: SKILL.md  metadata.json
generated_memories/langmem/: config.json  entities.db  messages.db
generated_memories/memories/: memory_11ac52a420f8.json
generated_memories/semantic/: memory_11ac52a420f8.json  memory_1699f8387c10.json
scripts/: init_postgres.sh  init_postgres_docker.sql
